[gd_scene load_steps=2 format=3 uid="uid://bteb52yklpiuy"]

[ext_resource type="Script" path="res://skill.gd" id="1_8mtm1"]

[node name="Skill" type="Node"]
script = ExtResource("1_8mtm1")

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DurationTimer" type="Timer" parent="."]

[connection signal="timeout" from="DurationTimer" to="." method="duration_end"]
